# server

./: .dockerignore  .env.demo  .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  Cargo.toml  Dockerfile  QUICK_CONFIG.md  README.md  TEST_DOCUMENTATION.md  TEST_GUIDE.md  TEST_SUMMARY.md  arch.md  architecture_diagram.md  deny.toml  dev.sh  run_tests.sh
.docker/: version.json
.github/workflows/: build.yml
route-macros/: .dockerignore  Cargo.toml
route-macros/src/: args.rs  crud.rs  lib.rs  log.rs  openapi.rs  route_permission.rs
src/: lib.rs  macros.rs  main.rs
src/config/: api_doc.rs  db.rs  email.rs  error.rs  manager.rs  mod.rs
src/dto/: category.rs  common.rs  image.rs  link.rs  mod.rs  posts.rs  tag.rs  user.rs
src/handlers/: auth.rs  category.rs  email.rs  images.rs  links.rs  links_test.rs  mod.rs  posts.rs  room_messages.rs  rooms.rs  tags.rs  upload.rs  users.rs
src/middleware/: auth.rs  helpers.rs  mod.rs
src/models/: categories.rs  external_links.rs  images.rs  mod.rs  permissions.rs  post_tags.rs  posts.rs  prelude.rs  role_permissions.rs  roles.rs  room_messages.rs  rooms.rs  tags.rs  user.rs  user_permissions.rs  user_roles.rs  users.rs
src/routes/: auth.rs  categories.rs  email.rs  images.rs  links.rs  mod.rs  posts.rs  rooms.rs  routes_module.rs  sse.rs  tags.rs  upload.rs  user.rs  users.rs  version.rs
src/services/: auth.rs  auth_test.rs  category.rs  email.rs  images.rs  mod.rs  posts.rs  posts_final.rs  posts_test.rs  upload.rs  users.rs  ws.rs
src/sql/: images.sql  links.sql  posts.sql  room.sql  user.sql
src/utils/: crypto_pwd.rs  data_processing.rs  db_error.rs  file_size.rs  fmt_time.rs  jwt.rs  mod.rs  perm_cache.rs  sse.rs  websocket.rs
