[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
anyhow = "1.0.99"
argon2 = "0.5.3"
chrono = "0.4.41"
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    'runtime-tokio-rustls',
    'macros',
] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.47.1"
uuid = { version = "1.18.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
