[package]
name = "server"
version = "0.1.3"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-web-lab = "0.24.3"
actix-ws = "0.3.0"
anyhow = "1.0.99"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.41"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "rand_core"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.4.0"
md5 = "0.8.0"
nu-ansi-term = "0.50.1"
once_cell = "1.21.3"
regex = "1.11.2"
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    'runtime-tokio-rustls',
    'macros',
] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
utoipa = "5.4.0"
uuid = { version = "1.18.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
route-macros = { path = "./route-macros" }
inventory = "0.3.21"
actix-rt = "2.11.0"
actix-multipart = "0.7.2"
image = { version = "0.25.8", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
qiniu-upload-manager = "0.2.4"


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3     # 使用最高优化级别
lto = true        # 启用链接时优化
codegen-units = 1 # 使用单个代码生成单元以获得更好的优化
panic = "abort"   # 在 panic 时直接中止，减少二进制大小
strip = true      # 自动剥离符号信息
debug = false     # 不包含调试信息

[profile.release.package."*"]
opt-level = 3 # 为所有依赖启用最高优化级别

# 可选：添加基准测试配置
[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false

# 可选：添加测试配置
[profile.test]
opt-level = 0
debug = true
debug-assertions = true

[package.metadata]
rustc-args = ["-Z", "unpretty=expanded"]
